--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 VitautasSite.code-workspace
 resources/js/jquery-3.4.1.min.js
 .vscode/sftp.json
+.vscode/ftp-kr.json
+.vscode/ftp-kr.sync.cache.json
